fix(button): Button alignment as card action + dense

--- a/src/@core/preset/preset/overrides.scss
+++ b/src/@core/preset/preset/overrides.scss
@@ -267,6 +267,9 @@ button {
   .v-card__actions {
     &.dense {
       padding: 0 calc(#{$card-spacer} - 12px) calc(#{$card-spacer} - 12px);
+      .v-btn {
+        min-width: 68px;
+      }
     }
   }
 }
